--- a/user/build.gradle
+++ b/user/build.gradle
@@ -84,6 +84,10 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    //포트원 결제
+    implementation 'io.portone:server-sdk:0.8.1'
+
 }
 
 tasks.named('test') {
