--- a/admin/src/main/resources/application-dev.yml
+++ b/admin/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 # tomcat server setting
 server:
-  port: 82  # HTTPS를 사용할 포트 (기본 포트가 8443)
+  port: 82
   servlet:
     encoding:
       charset: UTF-8
