--- a/user/src/main/resources/application-dev.yml
+++ b/user/src/main/resources/application-dev.yml
@@ -6,6 +6,11 @@ server:
     encoding:
       charset: UTF-8
       force: true
+#  ssl:
+#    enabled: true
+#    key-store: classpath:keystore.p12  # 인증서 파일 경로
+#    key-store-password: "111111"  # 인증서 생성 시 사용한 비밀번호
+#    key-store-type: PKCS12  # 인증서 유형
 
 # Spring boot environment settings
 spring:
