--- a/user/build.gradle
+++ b/user/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     implementation 'org.webjars:bootstrap:3.3.7'
 
 
-////    // 패스워드 보안
+    // 패스워드 보안
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
 
